--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ body{
     padding: 20px;
     display: flex;
     justify-content: space-between;
+    color: var(--Dark-Slate-Grey);
 }
 
 /* form */
@@ -47,9 +48,9 @@ form p{
 }
 
 form ul{
-    padding-left: 25px;
     margin-bottom: 30px;
     list-style-image: url(./assets/images/icon-list.svg);
+    list-style-position: inside;
 }
 
 form ul li{
@@ -59,6 +60,8 @@ form ul li{
 /* email-field */
 .email-field label{
     display: block;
+    font-size: 13px;
+    font-weight: 700;
 }
 
 .email-field input{
@@ -66,7 +69,7 @@ form ul li{
     height: 45px;
     border: 1px solid var(--Grey);
     outline: none;
-    margin: 15px 0;
+    margin: 13px 0;
     padding-left: 20px;
     border-radius: 7px;
 }
@@ -80,6 +83,13 @@ form ul li{
     padding: 10px;
     border-radius: 7px;
     cursor: pointer;
+    border: none;
+}
+
+.email-field button:active{
+    background-color: var(--Tomato);
+    box-shadow: 0px 15px 15px rgb(255, 98, 87, 0.3);
+    
 }
 
 /* photo-container */
@@ -90,4 +100,26 @@ form ul li{
 .photo-container img{
     width: 100%;
     height: 100%;
+}
+
+@media (max-width: 600px) {
+    .container{
+        flex-direction: column-reverse;
+        align-items: center;
+        margin: none;
+        padding: 0;
+        height: 100vh;
+        border-radius: 0;
+    }
+    .photo-container{
+        width: 100%;
+        height: 40%;
+    }
+    /* #side-img{
+        width: 100% ?????
+    } */ 
+    form{
+        width: 100%;
+        height: 60%;
+    }
 }
