--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ body{
     display: flex;
     justify-content: space-between;
     color: var(--Dark-Slate-Grey);
+    display: none;
 }
 
 /* form */
@@ -58,13 +59,13 @@ form ul li{
 }
 
 /* email-field */
-.email-field label{
+label{
     display: block;
     font-size: 13px;
     font-weight: 700;
 }
 
-.email-field input{
+input{
     width: 90%;
     height: 45px;
     border: 1px solid var(--Grey);
@@ -74,7 +75,7 @@ form ul li{
     border-radius: 7px;
 }
 
-.email-field button{
+button{
     width: 90%;
     font-size: 15px;
     height: 45px;
@@ -86,7 +87,7 @@ form ul li{
     border: none;
 }
 
-.email-field button:active{
+button:active{
     background-color: var(--Tomato);
     box-shadow: 0px 15px 15px rgb(255, 98, 87, 0.3);
     
@@ -97,9 +98,48 @@ form ul li{
     width: 40%;
 }
 
-.photo-container img{
+#side-img{
     width: 100%;
     height: 100%;
+    content: url('./assets/images/illustration-sign-up-desktop.svg');
+}
+
+/* succesess page */
+.success-page{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.success-container{
+    width: 400px;
+    background-color: var(--White);
+    padding: 45px;
+    border-radius: 25px;
+}
+
+.success-container img{
+    width: 50px;
+    margin-bottom: 20px;
+}
+
+.success-container h1{
+    font-size: 2.6em;
+}
+
+.success-container p {
+    margin: 20px 0;
+    font-size: 13px;
+    line-height: 20px;
+}
+
+.success-container button{
+    margin-top: 10px;
+    width: 100%;
+    font-size: 0.8em;
 }
 
 @media (max-width: 600px) {
@@ -115,9 +155,11 @@ form ul li{
         width: 100%;
         height: 40%;
     }
-    /* #side-img{
-        width: 100% ?????
-    } */ 
+    #side-img{
+       background-position: center center;
+       content: url("./assets/images/illustration-sign-up-mobile.svg");
+
+    } 
     form{
         width: 100%;
         height: 60%;
